crates/compiler/src/tests/e2e/bad/0033_extern_fn_syntax_error/main.gom

extern "go" "strconv" ["Itoa"] go_itoa(n: int32) -> string;
extern "go" "strings" ["ToUpper"] go_toupper(s: string) -> string;

fn main() {
    string_println(go_itoa(42));
    string_println(go_toupper("hello"));
}
